--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^6.9.0"
   }
 }
