--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
     "sucrase": "^3.29.0",
     "ts-node-dev": "^2.0.0",
