--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "dotenv": "^16.0.3",
@@ -21,6 +22,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.0"
   }
