--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.16",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
@@ -24,6 +25,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0"
   }
 }
