--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0"
